grammar.js
    structure: ($) =>
      list($._semicolon, choice($._structure_item, $.package_statement)),

    _structure_item: ($) =>
      choice(
        $.package_declaration,
        $.import_declaration,
        $.using_declaration,
        $.type_definition,
        $.error_type_definition,
        $.struct_definition,
        $.tuple_struct_definition,
        $.enum_definition,
        $.value_definition,
        $.const_definition,
        $.function_definition,
        $.test_definition,
        $.trait_definition,
        $.impl_definition,
        $.impl_declaration,
        $.type_alias_definition,
        $.trait_alias_definition,
        $.function_alias_definition
      ),

    visibility: ($) => choice("priv", seq("pub", optional($.pub_attribute))),

    pub_attribute: (_) => seq("(", choice("readonly", "all", "open"), ")"),

    derive_item: ($) => seq($.type_name, optional($.arguments)),

    derive_directive: ($) => seq("derive", "(", list(",", $.derive_item), ")"),

    type_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        optional("extern"),
        "type",
        $.identifier,
        optional($.type_parameters),
        optional(seq("=", $._type)),
        optional($.derive_directive)
      ),

    struct_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "struct",
        $.identifier,
        optional($.type_parameters),
        "{",
        list($._semicolon, $._struct_body_item),
        "}",
        optional($.derive_directive)
      ),

    _struct_body_item: ($) =>
      choice(prec(1, $.struct_constructor_declaration), $.struct_field_declaration),

    enum_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "enum",
        $.identifier,
        optional($.type_parameters),
        "{",
        list($._semicolon, $.enum_constructor),
        "}",
        optional($.derive_directive)
      ),

    enum_constructor_payload: ($) =>
      choice(
        seq("(", list1(",", $.constructor_parameter), ")"),
        seq("=", $.integer_literal)
      ),

    enum_constructor: ($) =>
      seq($._uppercase_identifier, optional($.enum_constructor_payload)),

    constructor_parameter: ($) =>
      choice(
        seq(optional("mut"), $._type),
        seq(optional("mut"), $.label, ":", $._type)
      ),

    const_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.pub),
        "const",
        $._uppercase_identifier,
        optional($.type_annotation),
        "=",
        $._expression
      ),

    external_linkage: ($) => seq("extern", $.string_literal),

    external_source: ($) =>
      choice(
        $.string_literal,
        seq($.string_literal, $.string_literal),
        $.multiline_string_literal
      ),

    function_definition: ($) => {
      const signature = seq(
        optional($.attributes),
        optional($.visibility),
        optional($.external_linkage),
        optional("async"),
        "fn",
        optional($.type_parameters),
        $.function_identifier,
        optional("!"),
        optional(alias($._signature_parameters, $.parameters))
      );

      return choice(
        // With body (normal .mbt files)
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          optional($.where_clause),
          $.block_expression
        ),
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          "=",
          $.external_source
        ),
        // Without body (.mbti files) - requires return type to disambiguate from ASI
        seq(signature, choice(seq("->", $.return_type), $.error_annotation))
      );
    },

    _signature_parameters: ($) =>
      seq("(", list(",", $._signature_parameter), ")"),

    test_definition: ($) =>
      seq(
        optional($.attributes),
        optional("async"),
        "test",
        optional($.string_literal),
        optional($.parameters),
        $.block_expression
      ),

    trait_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "trait",
        $.identifier,
        optional($.super_trait_declaration),
        optional(
          seq("{", list($._semicolon, $.trait_method_declaration), "}")
        )
      ),

    trait_alias_targets: ($) =>
      choice(
        seq($._type, "as", $.identifier, optional($.type_parameters)),
        seq($._type, "=", $._type),
        seq($.package_identifier, $.dot_identifier),
        seq($.dot_identifier),
        seq($.package_identifier, ".(", list(",", $.trait_alias_target), ")")
      ),

    trait_alias_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "traitalias",
        $.trait_alias_targets
      ),

    impl_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "impl",
        optional($.type_parameters),
        $.type_name,
        optional(seq("for", $._type)),
        "with",
        optional(seq("fn", optional($.type_parameters))),
        $.function_identifier,
        optional("!"),
        $.parameters,
        optional(seq("->", $.return_type)),
        choice($.block_expression, seq("=", $.external_source))
      ),

    // Impl declaration without body (for .mbti interface files)
    _expression: ($) => choice($._complex_expression, $._simple_expression),

    _simple_expression: ($) =>
      choice(
        $.atomic_expression,
        $.qualified_identifier,
        $.unary_expression,
        $.struct_expression,
        alias($.nonempty_block_expression, $.block_expression),
        $.anonymous_lambda_expression,
        $.anonymous_matrix_lambda_expression,
        $.constructor_expression,
        $.apply_expression,
        $.array_access_expression,
        $.dot_apply_expression,
        $.dot_dot_apply_expression,
        $.access_expression,
        $.method_expression,
        $.unit_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.constraint_expression,
        $.array_expression,
        $.map_expression,
        $.as_expression,
        $.is_expression,
        $.range_expression,
        $.append_expression,
        $.binary_expression,
        $.lexmatch_test_expression,
        $.regex_match_expression,
        "_"
      ),

    _non_pipe_expression: ($) =>
      choice(
        $._non_pipe_simple_expression,
        alias($._non_pipe_binary_expression, $.binary_expression)
      ),

    atomic_expression: ($) => choice($.string_interpolation, $.literal),

    literal: ($) =>
      choice(
        $.boolean_literal,
        $.double_literal,
        $.float_literal,
        $.integer_literal,
        $.byte_literal,
        $.byte_escape_literal,
        $.char_literal,
        $.string_literal,
        $.bytes_literal,
        $.regex_literal,
        $.multiline_string_literal
      ),

    boolean_literal: (_) => choice("true", "false"),

    integer_literal: (_) =>
      token(
        choice(
          /[0-9][0-9_]*(UL|U|L|N)?/,
          /0[xX][0-9a-fA-F_]+(UL|U|L|N)?/,
          /0[oO][0-7_]+(UL|U|L|N)?/,
          /0[bB][01_]+(UL|U|L|N)?/
        )
      ),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    string_literal: ($) => choice(seq('"', repeat($.string_fragment), '"')),

    string_fragment: ($) =>
      choice($.unescaped_string_fragment, $.escape_sequence),

    unescaped_string_fragment: (_) =>
      choice(
        token.immediate(prec(1, /\\[^ntbrf'"\\{]/)),
        token.immediate(prec(1, /[^"\\]+/))
      ),

    multiline_string_content: (_) => /[^\n]*/,

    multiline_string_fragment: ($) => seq("#|", $.multiline_string_content),

    multiline_interpolation_content: ($) =>
      choice(
        token.immediate(prec(1, /\\[^{]/)),
        token.immediate(prec(1, /[^\n\\]+/)),
        $.interpolator
      ),

    multiline_interpolation_fragment: ($) =>
      seq("$|", repeat($.multiline_interpolation_content)),

    multiline_string_literal: ($) =>
      prec.left(
        repeat1(
          choice(
            $.multiline_string_fragment,
            $.multiline_interpolation_fragment
          )
        )
      ),

    binary_expression: ($) =>
      choice(
        binaryExpression($._simple_expression),
        prec.left(
          "pipe",
          seq(
            $._simple_expression,
            "|>",
            choice($._simple_expression, $.pipe_arrow_function_expression)
          )
        ),
        prec.left(
          "pipe",
          seq(
            $._non_pipe_expression,
            "<|",
            choice($._non_pipe_expression, $.pipe_arrow_function_expression)
          )
        )
      ),

    struct_expression: ($) =>
      choice(
        seq(
          "{",
          choice(
            seq(
              $.labeled_expression_pun,
              ",",
              list(",", $.struct_field_expression)
            ),
            seq($.labeled_expression, optional(",")),
            seq(
              $.labeled_expression,
              ",",
              list1(",", $.struct_field_expression)
            )
          ),
          "}"
        ),
        seq($.type_name, "::", "{", list(",", $.struct_field_expression), "}"),
        seq(optional(seq($.type_name, "::")), "{", "..", $._expression, "}"),
        seq(
          optional(seq($.type_name, "::")),
          "{",
          "..",
          $._expression,
          ",",
          list(",", $.struct_field_expression),
          "}"
        )
      ),

    struct_field_expression: ($) =>
      choice($.labeled_expression, $.labeled_expression_pun),

    labeled_expression: ($) => seq($._lowercase_identifier, ":", $._expression),

    labeled_expression_pun: ($) => $._lowercase_identifier,

    block_expression: ($) =>
      seq("{", list($._semicolon, $._statement_expression), "}"),

    nonempty_block_expression: ($) =>
      seq("{", list1($._semicolon, $._statement_expression), "}"),

    anonymous_matrix_lambda_expression: ($) =>
      seq(
        optional("async"),
        "fn",
        optional("!"),
        "{",
        list($._semicolon, $.matrix_case_clause),
        "}"
      ),

    constructor_expression: ($) =>
      choice(
        $._uppercase_identifier,
        seq($.package_identifier, $.dot_uppercase_identifier),
        seq($.type_name, "::", $._uppercase_identifier)
      ),

    argument: ($) =>
      choice(
        $._expression,
        $.labelled_argument,
        $.forwarded_labelled_argument,
        $.optional_argument,
        $.forwarded_optional_argument
      ),

    arguments: ($) => seq("(", list(",", $.argument), ")"),

    apply_expression: ($) =>
      prec.right(
        seq($._simple_expression, optional($.apply_operator), $.arguments)
      ),

    array_access_expression: ($) =>
      seq(
        $._simple_expression,
        "[",
        choice(
          $._expression,
          seq(optional($._expression), ":", optional($._expression))
        ),
        "]"
      ),

    method_expression: ($) => seq($.type_name, "::", $._lowercase_identifier),

    unit_expression: (_) => seq("(", ")"),

    tuple_expression: ($) =>
      choice(
        seq(
          "(",
          $._expression,
          repeat1(seq(",", $._expression)),
          optional(","),
          ")"
        ),
        seq("(", $._expression, ",", ")")
      ),

    array_expression: ($) =>
      choice(
        seq("[", list(",", seq(optional(".."), $._expression)), "]"),
        $.list_comprehension_expression
      ),

    map_expression: ($) => seq("{", list(",", $.map_element_expression), "}"),

    as_expression: ($) => seq($._simple_expression, "as", $.type_name),

    is_expression: ($) =>
      seq(
        $._simple_expression,
        "is",
        choice($.range_pattern, $._simple_pattern)
      ),

    match_expression: ($) =>
      seq(
        "match",
        $._simple_expression,
        "{",
        list($._semicolon, $.case_clause),
        "}"
      ),

    case_clause: ($) =>
      seq($._pattern, optional($.pattern_guard), "=>", $._statement_expression),

    break_expression: ($) =>
      seq("break", optional($.label), strictList(",", $._expression)),

    continue_expression: ($) =>
      seq("continue", optional($.label), strictList(",", $._expression)),

    try_expression: ($) => seq("try", choice("!", "?"), $._simple_expression),

    if_expression: ($) =>
      seq(
        "if",
        $._simple_expression,
        $.block_expression,
        optional($.else_clause)
      ),

    else_clause: ($) =>
      seq("else", choice($.block_expression, $.if_expression)),

    _statement_expression: ($) =>
      choice(
        $.struct_definition,
        $.enum_definition,
        $.type_definition,
        $.let_expression,
        $.letrec_expression,
        $.and_expression,
        $.let_mut_expression,
        $.guard_expression,
        $.guard_let_expression,
        $.assign_expression,
        $.named_lambda_expression,
        $.named_matrix_expression,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $.raise_expression,
        $.defer_expression,
        $.proof_assert_expression,
        $.proof_let_expression,
        $._expression,
        $.unfinished
      ),

    let_expression: ($) =>
      seq("let", $._pattern, optional($.type_annotation), "=", $._expression),

    let_mut_expression: ($) =>
      seq(
        "let",
        "mut",
        $._lowercase_identifier,
        optional($.type_annotation),
        "=",
        $._expression
      ),

    guard_expression: ($) =>
      seq("guard", $._simple_expression, optional($.guard_else_expression)),

    guard_else_expression: ($) => seq("else", $.block_expression),

    guard_let_expression: ($) =>
      seq(
        "guard",
        "let",
        $._pattern,
        "=",
        $._simple_expression,
        optional($.guard_let_else_expression)
      ),

    assign_operator: ($) => choice("=", "+=", "-=", "*=", "/=", "%="),

    assign_expression: ($) =>
      seq($.left_value, $.assign_operator, $._expression),

    left_value: ($) =>
      choice(
        $.qualified_identifier,
        $.access_expression,
        $.array_access_expression
      ),

    named_lambda_expression: ($) =>
      seq(
        optional("async"),
        "fn",
        $._lowercase_identifier,
        optional("!"),
        $.parameters,
        optional(choice(seq("->", $.return_type), $.error_annotation)),
        $.block_expression
      ),

    while_expression: ($) =>
      seq(
        optional($.loop_label),
        "while",
        $._simple_expression,
        $.block_expression,
        optional(choice($.else_clause, $.nobreak_clause))
      ),

    loop_expression: ($) =>
      seq(
        optional($.loop_label),
        "loop",
        strictList1(",", $._expression),
        "{",
        list($._semicolon, $.matrix_case_clause),
        "}"
      ),

    for_binder: ($) => seq($._lowercase_identifier, "=", $._expression),

    for_in_expression: ($) =>
      seq(
        optional($.loop_label),
        "for",
        strictList(",", $._lowercase_identifier),
        "in",
        $._non_pipe_expression,
        optional(
          seq(
            $._semicolon,
            strictList1(",", $.for_binder),
            optional(seq($._semicolon, strictList1(",", $.for_binder)))
          )
        ),
        $.block_expression,
        optional(choice($.else_clause, $.nobreak_clause)),
        optional($.where_clause)
      ),

    return_expression: ($) => seq("return", optional($._expression)),

    _type: ($) => choice($._simple_type, $.function_type),
