test/corpus/asi/before.txt
================================================================================
can occur before semi (MULTILINE_STRING)
================================================================================
fn main {
  #|1
  // a
  $|2
  // c
  #|3
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (atomic_expression
        (literal
          (multiline_string_literal
            (multiline_string_fragment
              (multiline_string_separator)
              (multiline_string_content))
            (comment)
            (automatic_newline)
            (multiline_interpolation_fragment
              (multiline_interpolation_separator)
              (multiline_interpolation_content))
            (comment)
            (automatic_newline)
            (multiline_string_fragment
              (multiline_string_separator)
              (multiline_string_content)))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (RBRACE, RBRACKET, RPAREN)
================================================================================
fn main {
  { a }
  [ a ]
  ( a )
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (nonempty_block_expression
        (qualified_identifier
          (lowercase_identifier)))
      (semicolon
        (automatic_semicolon))
      (array_expression
        (qualified_identifier
          (lowercase_identifier)))
      (semicolon
        (automatic_semicolon))
      (tuple_expression
        (qualified_identifier
          (lowercase_identifier)))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (BREAK, CONTINUE, RETURN)
================================================================================
fn main {
  break
  1
  continue
  2
  return
  4
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (break_expression)
      (semicolon
        (automatic_semicolon))
      (atomic_expression
        (literal
          (integer_literal)))
      (semicolon
        (automatic_semicolon))
      (continue_expression)
      (semicolon
        (automatic_semicolon))
      (atomic_expression
        (literal
          (integer_literal)))
      (semicolon
        (automatic_semicolon))
      (return_expression)
      (semicolon
        (automatic_semicolon))
      (atomic_expression
        (literal
          (integer_literal)))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (PLUS, MINUS)
================================================================================
fn main {
  let x = 1 +
    2
  let x = 1 -
    2
}

fn f[X: Default +
  Clone]() -> Unit {
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (binary_expression
          (atomic_expression
            (literal
              (integer_literal)))
          (atomic_expression
            (literal
              (integer_literal)))))
      (semicolon
        (automatic_semicolon))
      (let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (binary_expression
          (atomic_expression
            (literal
              (integer_literal)))
          (atomic_expression
            (literal
              (integer_literal)))))
      (semicolon
        (automatic_semicolon))))
  (semicolon
    (automatic_semicolon))
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (type_parameters
      (type_identifier
        (identifier
          (uppercase_identifier))
        (colon)
        (constraints
          (constraint
            (qualified_type_identifier
              (identifier
                (uppercase_identifier))))
          (constraint
            (qualified_type_identifier
              (identifier
                (uppercase_identifier)))))))
    (parameters)
    (return_type
      (type
        (apply_type
          (qualified_type_identifier
            (identifier
              (uppercase_identifier))))))
    (block_expression)))

================================================================================
can occur before semi (PACKAGE_NAME)
================================================================================
fn main {
  let x = @a
    .T
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (constructor_expression
          (package_identifier)
          (dot_uppercase_identifier)))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (LET, MUTABLE)
================================================================================
fn main {
  let
    y = 2
  let mut
    x = 3
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (let_mut_expression
        (lowercase_identifier)
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (MATCH)
================================================================================
fn main {
  match
    x {
    _ => ()
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (match_expression
        (qualified_identifier
          (lowercase_identifier))
        (case_clause
          (pattern
            (simple_pattern))
          (unit_expression))
        (semicolon
          (automatic_semicolon)))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (TRY)
================================================================================
fn main {
  try
  f() catch {}
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (try_expression
        (apply_expression
          (qualified_identifier
            (lowercase_identifier))
          (arguments)))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (CATCH)
================================================================================
fn main {
  try f() catch
  {
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (try_expression
        (apply_expression
          (qualified_identifier
            (lowercase_identifier))
          (arguments)))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (LPAREN)
================================================================================
fn main {
  f(
    1)
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (apply_expression
        (qualified_identifier
          (lowercase_identifier))
        (arguments
          (argument
            (atomic_expression
              (literal
                (integer_literal))))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (CONST)
================================================================================
const
  C = 1
--------------------------------------------------------------------------------

(structure
  (const_definition
    (uppercase_identifier)
    (atomic_expression
      (literal
        (integer_literal)))))

================================================================================
can occur before semi (LBRACKET)
================================================================================
fn main {
  a[
    1]
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (array_access_expression
        (qualified_identifier
          (lowercase_identifier))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (LBRACE)
================================================================================
fn main {
  {
    a
  }
  T::{
    a
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (nonempty_block_expression
        (qualified_identifier
          (lowercase_identifier))
        (semicolon
          (automatic_semicolon)))
      (semicolon
        (automatic_semicolon))
      (struct_expression
        (type_name
          (qualified_type_identifier
            (identifier
              (uppercase_identifier))))
        (colon_colon)
        (struct_field_expression
          (labeled_expression_pun
            (lowercase_identifier))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (INFIX1)
================================================================================
fn main {
  1 >
  2
  2 <
  3
  3 ==
  4
  5 !=
  6
  7 >=
  8
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (INFIX2)
================================================================================
fn main {
  1 >>
  2
  3 <<
  4
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (PLUS, MINUS)
================================================================================
fn main {
  1 +
  2
  3 -
  4
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (INFIX3)
================================================================================
fn main {
  1 *
  2
  3 /
  4
  5 %
  6
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (binary_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (IMPL)
================================================================================
impl
A for B with f() {
}
--------------------------------------------------------------------------------

(structure
  (impl_definition
    (type_name
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (for_keyword)
    (type
      (apply_type
        (qualified_type_identifier
          (identifier
            (uppercase_identifier)))))
    (function_identifier
      (lowercase_identifier))
    (parameters)
    (block_expression)))

================================================================================
can occur before semi (IF)
================================================================================
fn main {
  if
  true {}
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (if_expression
        (atomic_expression
          (literal
            (boolean_literal)))
        (block_expression))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (GUARD)
================================================================================
fn main {
  guard
  let x =
  1
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (guard_let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (WHILE)
================================================================================
fn main {
  while
  true {
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (while_expression
        (atomic_expression
          (literal
            (boolean_literal)))
        (block_expression))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (ASYNC)
================================================================================
async
fn f() {
}

fn main {
  let x = async
  fn {
  }
  async
  fn g() {
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (parameters)
    (block_expression))
  (semicolon
    (automatic_semicolon))
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (anonymous_matrix_lambda_expression))
      (semicolon
        (automatic_semicolon))
      (named_lambda_expression
        (lowercase_identifier)
        (parameters)
        (block_expression))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (FN)
================================================================================
fn
f() {
}

fn main {
  let x =
  fn
  // a
  {
  }
  fn
  // g
  g() {
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (parameters)
    (block_expression))
  (semicolon
    (automatic_semicolon))
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (anonymous_matrix_lambda_expression
          (comment)))
      (semicolon
        (automatic_semicolon))
      (named_lambda_expression
        (comment)
        (lowercase_identifier)
        (parameters)
        (block_expression))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (FAT_ARROW)
================================================================================
fn main {
  match x {
    _ =>
      // a
      #|1
      // b
      $|1
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (match_expression
        (qualified_identifier
          (lowercase_identifier))
        (case_clause
          (pattern
            (simple_pattern))
          (comment)
          (atomic_expression
            (literal
              (multiline_string_literal
                (multiline_string_fragment
                  (multiline_string_separator)
                  (multiline_string_content))
                (comment)
                (automatic_newline)
                (multiline_interpolation_fragment
                  (multiline_interpolation_separator)
                  (multiline_interpolation_content))))))
        (semicolon
          (automatic_semicolon)))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (THIN_ARROW)
================================================================================
fn f() ->
/// a
Unit {
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (parameters)
    (return_type
      (comment)
      (type
        (apply_type
          (qualified_type_identifier
            (identifier
              (uppercase_identifier))))))
    (block_expression)))

================================================================================
can occur before semi (IN)
================================================================================
fn main {
  for x in
  // a
  // b
  [1, 2, 3] {
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (for_in_expression
        (for_keyword)
        (lowercase_identifier)
        (comment)
        (comment)
        (array_expression
          (atomic_expression
            (literal
              (integer_literal)))
          (atomic_expression
            (literal
              (integer_literal)))
          (atomic_expression
            (literal
              (integer_literal))))
        (block_expression))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (EQUAL)
================================================================================
fn main {
  let x =
  // 3
    3
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (let_expression
        (pattern
          (simple_pattern
            (lowercase_identifier)))
        (comment)
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (AUGMENTED_ASSIGNMENT)
================================================================================
fn main {
  x +=
  2
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (assign_expression
        (left_value
          (qualified_identifier
            (lowercase_identifier)))
        (assign_operator
          (plus_equal))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (ENUM)
================================================================================
enum
// E
E {
  A
  B
}
--------------------------------------------------------------------------------

(structure
  (enum_definition
    (comment)
    (identifier
      (uppercase_identifier))
    (enum_constructor
      (uppercase_identifier))
    (semicolon
      (automatic_semicolon))
    (enum_constructor
      (uppercase_identifier))
    (semicolon
      (automatic_semicolon))))

================================================================================
can occur before semi (ELSE)
================================================================================
fn main {
  if a {
  } else
  // a
  {
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (if_expression
        (qualified_identifier
          (lowercase_identifier))
        (block_expression)
        (else_clause
          (comment)
          (block_expression)))
      (semicolon
        (automatic_semicolon)))))

================================================================================
can occur before semi (EXTERN)
================================================================================
extern
"c" fn f() = "a"
--------------------------------------------------------------------------------

(structure
  (function_definition
    (external_linkage
      (string_literal
        (string_fragment
          (unescaped_string_fragment))))
    (function_identifier
      (lowercase_identifier))
    (parameters)
    (external_source
      (string_literal
        (string_fragment
          (unescaped_string_fragment))))))

================================================================================
can occur before semi (COMMA)
================================================================================
enum E {
  A(Int,
  Int)
}

fn main {
  continue 1,
  2
  (1,
  2)
  loop x,
  y {
  }
  for x = 1,
  y = 2; true; x = x + 1 {
  }
  for x,
  y in [1, 2, 3] {
  }
  T::{
    a,
    b
  }
}

fn f(a: Int,
b: Int) -> Unit {
}
--------------------------------------------------------------------------------
